--- a/fleetman-mongodb.yaml
+++ b/fleetman-mongodb.yaml
@@ -35,6 +35,19 @@ spec:
   resources:
     requests:
       storage: 1Gi
+ ---
+ apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: mongo-pv
+spec:
+  capacity:
+    storage: 1Gi
+  accessModes:
+    - ReadWriteOnce
+  hostPath:
+    path: /mnt/data/mongo  # Le chemin sur l'hôte où les données seront stockées
+     
 ---
 apiVersion: v1
 kind: Service
