--- a/fleetman-mongodb.yaml
+++ b/fleetman-mongodb.yaml
@@ -2,51 +2,71 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: fleetman-mongodb
+  labels:
+    app: fleetman
+    component: mongo
 spec:
   replicas: 1
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 1
   selector:
     matchLabels:
-      app: fleetman-mongodb
+      app: fleetman
+      component: mongo
   template:
     metadata:
       labels:
-        app: fleetman-mongodb
+        app: fleetman
+        component: mongo
     spec:
       containers:
-        - name: fleetman-mongodb
+        - name: mongo
           image: mongo:3.6.23
           ports:
             - containerPort: 27017
           volumeMounts:
             - name: mongo-data
               mountPath: /data/db
+          resources:
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
+            requests:
+              memory: "256Mi"
+              cpu: "250m"
       volumes:
         - name: mongo-data
           persistentVolumeClaim:
-            claimName: mongo-pvc
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: mongo-pvc
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 1Gi
+            claimName: mongo-data-pvc
 ---
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: mongo-pv
+  name: mongo-data-pv
 spec:
   capacity:
-    storage: 1Gi
+    storage: 5Gi
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: /mnt/data/mongo  # Le chemin sur l'hôte où les données seront stockées
+    path: /mnt/data/mongo
+  persistentVolumeReclaimPolicy: Delete
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mongo-data-pvc
+spec:
+  storageClassName: ""
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 5Gi
+  volumeName: mongo-data-pv
 ---
 apiVersion: v1
 kind: Service
@@ -58,4 +78,5 @@ spec:
     - port: 27017
       targetPort: 27017
   selector:
-    app: fleetman-mongodb
+    app: fleetman
+    component: mongo
